# scisuit_pypkg

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  py_build_abis.bat  py_build_wheel.bat  pyproject.toml  setup.py
bindings/: core.cpp  core_stat tests.cpp  core_stat tests.h  core_stat.cpp  core_stat.h  dllimpexp.h  engineering.cpp  engineering.h  integration.cpp  integration.h  ode.cpp  ode.h  plot.cpp  plot.h  plot_helper.h  roots.cpp  roots.h  stat tests.cpp  stat_distributions.cpp  stat_tests.cpp  stat_tests.h  wrapperfuncs.cpp  wrapperfuncs.h  wrapperfuncs.hpp
bindings/core/: core.cpp  core.h  engineering.cpp  engineering.h  fitting.cpp  fitting.h  integration.cpp  integration.h  ode.cpp  ode.h  optimization.cpp  optimization.h  roots.cpp  roots.h
bindings/numerics/: ode.cpp  ode.h  roots.cpp  roots.h
bindings/stats/: anova.cpp  anova.h  distributions.cpp  distributions.h  miscfuncs.cpp  miscfuncs.h  multivariate.cpp  multivariate.h  nonparametric.cpp  nonparametric.h  stat tests.cpp  stat tests.h  stat_distributions.cpp  stat_tests.cpp  stat_tests.h  stat_tests_aov.cpp
bindings/stats/basictests/: correlation.cpp  correlation.h  normality.cpp  normality.h  poissontest.cpp  poissontest.h
bindings/stats/multivariate/: itemanal.cpp  itemanal.h  pca.cpp  pca.h
cpp/: core.cpp  core.h  core.vcxproj.filters  core_stat.cpp  core_stat.h  plot.cpp  plot.h  plot_helper.h  pybind.sln  pybind.vcxproj  scilib_pybind.sln  wrapperfuncs.cpp  wrapperfuncs.h
cpp/pybind/: core.cpp  core.h  core.rc  plot.cpp  plot.h  plot_helper.h  pybind.vcxproj  wrapperfuncs.h
scisuit/: __init__.py  _ctypeslib.py  app.py  defs.py  derivative.py  fitting.py  gdi.py  integ.py  ode.py  optimize.py  plot.py  roots.py  settings.py  theapp.py  util.py  vars.py
scisuit/_ctypeslib/: __init__.py
scisuit/apps/: __init__.py  frmfluidprops.py  frmpsychrometry.py  psychrometry.py
scisuit/core/: __init__.py  fitting.py  roots.py
scisuit/eng/: __init__.py  _humidair.py  _refrigerants.py  _water.py  defs.py  dryair.py  fluids_dbase.py  food.py  fpe.py  humidair.py  material.py  material_computed.py  material_empirical.py  refrigerants.db  refrigerants.py  thermophysical.db  water.py
scisuit/eng/fluids/: __init__.py  dryair.py  fluid.py  fluids_dbase.py  humidair.py  refrigerant.py  refrigerants.py  thermophysical.py
scisuit/eng/food/: __init__.py  enthalpy.py  food.py  wateractivity.py
scisuit/eng/fpe/: __init__.py  _foodproperty.py  foodmaterial.py  foodproperty.py  thermalprop.py  wateractivity.py
scisuit/plot/: __init__.py  _barcharts.py  _bubblechart.py  _chartelems.py  _chartfuncs.py  _charts.py  _moody.py  _qqcharts.py  _quiverchart.py  barcharts.py  bubblechart.py  chartelems.py  charts.py  colors.py  consts.py  defs.py  dirfield.py  enums.py  funcs.py  gdi.py  gdiobj.py  qqcharts.py  quiverchart.py
scisuit/plot/multivariate/: __init__.py  _biplot.py  _loading.py  _outlier.py  _score.py  _scree.py
scisuit/stats/: __init__.py  _aov.py  _core.py  _distributions.py  _linregress.py  _test_basic.py  _test_normality.py  _test_t.py  _test_z.py  aov.py  aov2.py  core.py  dist_random.py  distributions.py  kurt.py  linregress.py  mode.py  rolling.py  sample.py  skew.py  test_basic.py  test_f.py  test_sign.py  test_t.py  test_z.py
scisuit/stats/anova/: __init__.py  _aov.py  _aov2.py  _qdist.py
scisuit/stats/basictests/: __init__.py  _nonparametric.py  _poisson1sample.py  _test_cor.py  _test_f.py  _test_normality.py  _test_t.py  _test_z.py
scisuit/stats/multivariate/: __init__.py  _itemanalysis.py  _pca.py
scisuit/stats/nonparametric/: __init__.py  _friedman.py  _kruskalwallis.py  _mannwhitney.py  _sign_wilcoxsign.py
scisuit/stats/regression/: __init__.py  _linear_multiple.py  _linear_simple.py  _linearregress.py
scisuit/stats/tables/: __init__.py  _chisqtest.py  _tally.py  chisqtest_assoc.py
scisuit/util/: __init__.py  path.py  pkg.py
scisuit/wxpy/: __init__.py  makeicon.py  numtext.py
src/: LICENSE  README.md
src/scisuit/: app.py
src/scisuit/eng/: __init__.py  water.py
src/scisuit/eng/fpe/: __init__.py
src/scisuit/stats/: linregress.py
tests/: aov.py  charts.py  correlationtest.py  fitting.py  fluids.py  foodproceng.py  integ.py  integration.py  makeicon.py  misc.py  nonparam.py  odetest.py  optimization.py  plot.py  plot_gdiobj.py  psychrometry.py  psychrometrycmd.py  rootfinding.py  statisticaldists.py  statisticalessentialtests.py  test_apps.py  test_fitting.py  test_fluids.py  test_food.py  test_fpe.py  test_integ.py  test_plot.py  test_plot_gdi.py  test_psychrometry.py  test_refrigerant.py  test_roots.py  test_stats.py  tests.ipynb
tests/eng/: fluids.py  psychrometrycmd.py
tests/engineering/: psychrometrycmd.py
tests/numerics/: odetest.py  rootfinding.py
tests/plotting/: plot.py  plot_gdiobj.py
tests/stats/: aov.py  expregress.py  linregress_multiple.py  linregress_simple.py  statisticalessentialtests.py
tests/stats/aov/: aov1.py  aov2.py
tests/stats/essentials/: f_test.py  normality.py  poisson.py  t_tests.py  z_test.py
tests/stats/multivariate/: itemanalysistest.py  pcatest.py
tests/stats/nonparam/: friedmantest.py  kruskalwasllis.py  mannwhitney.py  signtest.py  wilcoxsigntest.py
tests/web_gen_python/: food.py  readme.txt  thermalproc.py
tests/web_gen_python/stats/: aov1.py  aov2.py  bootstrap_1samplefuncs.py  bootstrap_2mean.py  columnstats.py  normalitytests.py  test_f.py  test_t1sample.py  test_t2sample.py  test_tpaired.py  test_z.py
