[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "scisuit"
version = "1.3.0"
authors = [{ name="Gokhan Bingol, PhD", email="gbingol@pebytes.com" },]
description = "Scientific Computing Package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", ]
classifiers = [
    "Programming Language :: Python :: 3",
	"Programming Language :: C++",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
]


[project.urls]
"Homepage" = "https://www.pebytes.com"
